--- a/views/Login/index.ejs
+++ b/views/Login/index.ejs
@@ -2,18 +2,22 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,minimum-scale=1">
 		<title>Login</title>
 		<link href="styles/dashboard.css" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	</head>
 	<body>
 		<div class="login">
+
 			<h1>Login</h1>
+
 			<div class="links">
-				<a href="index.html" class="active">Login</a>
-				<a href="register.html">Register</a>
+				<a href="index.php" class="active">Login</a>
+				<a href="register.php">Register</a>
 			</div>
-			<form action="authenticate.php" method="post">
+
+			<form action="/authenticate" method="post" enctype="multipart/form-data">
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
@@ -22,8 +26,38 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
+
+				<label id="rememberme">
+					<input type="checkbox" name="rememberme">Remember me
+				</label>
+				
+				<div class="msg"></div>
+
 				<input type="submit" value="Login">
+
 			</form>
+
 		</div>
+
+		<script>
+// AJAX code
+let loginForm = document.querySelector('.login form');
+loginForm.onsubmit = event => {
+    event.preventDefault();
+    fetch(loginForm.action, { method: 'POST', body: new FormData(loginForm) }).then(response => response.text()).then(result => {
+        if (result === "Success") {
+            // Handle the success case here (e.g., show a success message)
+            document.querySelector('.msg').innerHTML = "Login successful! Redirecting...";
+            // You can add a delay before redirecting if needed
+            setTimeout(() => {
+                window.location.href = "/dashboard"; // Redirect to the dashboard page
+            }, 2000); // Redirect after 2 seconds (adjust as needed)
+        } else {
+            document.querySelector('.msg').innerHTML = result;
+        }
+    });
+};
+
+		</script>
 	</body>
 </html>
