Working Login System

--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -1,10 +1,7 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
   font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -15,8 +12,7 @@ body {
 .login, .register {
   width: 400px;
   background-color: #ffffff;
-  -webkit-box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-          box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
   margin: 100px auto;
 }
 
@@ -29,20 +25,16 @@ body {
 }
 
 .login .links, .register .links {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 0 15px;
 }
 
 .login .links a, .register .links a {
-  color: #adb2ba;
+  color: #9da3ac;
   text-decoration: none;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
   padding: 0 10px 10px 10px;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .login .links a:hover, .register .links a:hover {
@@ -55,39 +47,43 @@ body {
 }
 
 .login form, .register form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   padding-top: 20px;
 }
 
 .login form label, .register form label {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50px;
+  justify-content: center;
+  align-items: center;
+  width: 12%;
   height: 50px;
   background-color: #3274d6;
   color: #ffffff;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .login form input[type="password"], .login form input[type="text"], .login form input[type="email"], .register form input[type="password"], .register form input[type="text"], .register form input[type="email"] {
-  width: 310px;
+  width: 80%;
   height: 50px;
   border: 1px solid #dee0e4;
+  border-left: 0;
   margin-bottom: 20px;
   padding: 0 15px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  outline: 0;
+}
+
+.login form input[type="password"]::placeholder, .login form input[type="text"]::placeholder, .login form input[type="email"]::placeholder, .register form input[type="password"]::placeholder, .register form input[type="text"]::placeholder, .register form input[type="email"]::placeholder {
+  color: #8e97a3;
+}
+
+.login form input[type="password"]:focus, .login form input[type="text"]:focus, .login form input[type="email"]:focus, .register form input[type="password"]:focus, .register form input[type="text"]:focus, .register form input[type="email"]:focus {
+  border: 1px solid #c2c6cd;
+  border-left: 0;
 }
 
 .login form input[type="submit"], .register form input[type="submit"] {
@@ -97,66 +93,161 @@ body {
   background-color: #3274d6;
   border: 0;
   cursor: pointer;
-  font-weight: bold;
+  font-weight: 500;
   color: #ffffff;
-  -webkit-transition: background-color 0.2s;
   transition: background-color 0.2s;
+  border-radius: 0;
+  appearance: none;
 }
 
 .login form input[type="submit"]:hover, .register form input[type="submit"]:hover {
   background-color: #2868c7;
-  -webkit-transition: background-color 0.2s;
   transition: background-color 0.2s;
 }
 
-.navtop {
+.login form #rememberme, .register form #rememberme {
+  width: 100%;
+  height: auto;
+  padding: 5px 20px;
+  background-color: transparent;
+  color: #000;
+  justify-content: flex-start;
+}
+
+.login form #rememberme input, .register form #rememberme input {
+  transform: scale(1.3);
+  margin-right: 7px;
+}
+
+.login form .msg, .register form .msg {
+  padding: 0 20px;
+  width: 100%;
+}
+
+.login form .captcha, .register form .captcha {
+  display: flex;
+}
+
+.login form .fb-btn, .login form .gl-btn, .register form .fb-btn, .register form .gl-btn {
+  display: flex;
+  text-decoration: none;
+  position: relative;
+  border-radius: 4px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px;
+  width: 92%;
+  margin: 15px 0 5px 0;
+  padding: 15px;
+  transition: background-color 0.2s;
+}
+
+.login form .fb-btn i, .login form .gl-btn i, .register form .fb-btn i, .register form .gl-btn i {
+  position: absolute;
+  left: 15px;
+}
+
+.login form .fb-btn:hover, .login form .gl-btn:hover, .register form .fb-btn:hover, .register form .gl-btn:hover {
+  color: #fff;
+  transition: background-color 0.2s;
+}
+
+.login form .fb-btn, .register form .fb-btn {
+  background-color: #507CBF;
+}
+
+.login form .fb-btn:hover, .register form .fb-btn:hover {
+  background-color: #426fb4;
+}
+
+.login form .gl-btn, .register form .gl-btn {
+  background-color: #d6523e;
+}
+
+.login form .gl-btn:hover, .register form .gl-btn:hover {
+  background-color: #cf412c;
+}
+
+.login form > a, .register form > a {
+  text-decoration: none;
+  color: #5b6574;
+  width: 100%;
+  padding: 5px 20px;
+}
+
+.login form > a:hover, .register form > a:hover {
+  color: #394049;
+}
+
+.header {
   background-color: #2f3947;
   height: 60px;
   width: 100%;
-  border: 0;
 }
 
-.navtop div {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.header .wrapper {
   display: flex;
+  position: relative;
   margin: 0 auto;
   width: 1000px;
   height: 100%;
 }
 
-.navtop div h1, .navtop div a {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
+.header .wrapper h1, .header .wrapper a, .header .wrapper label {
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
-.navtop div h1 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  font-size: 24px;
+.header .wrapper h1 {
+  flex: 1;
+  font-size: 20px;
   padding: 0;
   margin: 0;
   color: #eaebed;
   font-weight: normal;
 }
 
-.navtop div a {
-  padding: 0 20px;
-  text-decoration: none;
-  color: #c1c4c8;
-  font-weight: bold;
+.header .wrapper label, .header .wrapper input[type="checkbox"] {
+  display: none;
 }
 
-.navtop div a i {
+.header .wrapper label {
+  justify-content: center;
+  width: 60px;
+  border-left: 1px solid #272f3b;
+  cursor: pointer;
+}
+
+.header .wrapper label i {
+  color: #fff;
+}
+
+.header .wrapper label:hover i, .header .wrapper label:active i {
+  color: #eaebed;
+}
+
+.header .wrapper .menu {
+  display: flex;
+  align-items: center;
+}
+
+.header .wrapper .menu a {
+  padding: 0 15px;
+  text-decoration: none;
+  color: #c1c4c8;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.header .wrapper .menu a i {
+  font-size: 14px;
   padding: 2px 8px 0 0;
 }
 
-.navtop div a:hover {
+.header .wrapper .menu a:hover {
   color: #eaebed;
 }
 
@@ -172,31 +263,117 @@ body.loggedin {
 .content h2 {
   margin: 0;
   padding: 25px 0;
-  font-size: 22px;
+  font-size: 20px;
   border-bottom: 1px solid #e0e0e3;
   color: #4a536e;
 }
 
-.content > p, .content > div {
-  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+.content .block {
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
   margin: 25px 0;
   padding: 25px;
   background-color: #fff;
 }
 
-.content > p table td, .content > div table td {
-  padding: 5px;
-}
-
-.content > p table td:first-child, .content > div table td:first-child {
-  font-weight: bold;
-  color: #4a536e;
-  padding-right: 15px;
-}
-
-.content > div p {
+.content .block p {
   padding: 5px;
   margin: 0 0 10px 0;
 }
-/*# sourceMappingURL=style.css.map */
+
+.content.profile form label {
+  display: block;
+  padding: 15px 0 10px 0;
+  font-weight: 500;
+  font-size: 14px;
+  color: #4d4d4d;
+}
+
+.content.profile form input[type="text"], .content.profile form input[type="password"], .content.profile form input[type="email"] {
+  padding: 10px;
+  width: 250px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.content.profile .profile-detail {
+  padding: 5px;
+}
+
+.content.profile .profile-detail strong {
+  display: inline-block;
+  color: #777;
+  min-width: 120px;
+  font-size: 16px;
+}
+
+.content.profile .profile-detail i {
+  width: 28px;
+  color: #aaabad;
+}
+
+.content.profile .profile-btn {
+  display: inline-block;
+  text-decoration: none;
+  border: 0;
+  cursor: pointer;
+  color: #fff;
+  background-color: #3274d6;
+  margin: 20px 5px 0 0;
+  padding: 10px 15px;
+  border-radius: 4px;
+  appearance: none;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.content.profile .profile-btn:hover {
+  background-color: #2868c7;
+}
+
+@media screen and (max-width: 400px) {
+  .login, .register {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .header .wrapper {
+    width: 100%;
+  }
+  .header .wrapper h1 {
+    font-size: 18px;
+    padding: 10px;
+  }
+  .header .wrapper label {
+    display: inline-flex;
+  }
+  .header .wrapper .menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    flex-flow: column;
+    background-color: #252d38;
+    justify-items: flex-start;
+    align-items: flex-start;
+  }
+  .header .wrapper input[type="checkbox"]:checked ~ .menu {
+    display: flex;
+  }
+  .header .wrapper input[type="checkbox"]:checked ~ .menu a {
+    width: 100%;
+    padding: 15px 17px;
+    border-bottom: 1px solid #1f252e;
+  }
+  .content {
+    padding: 5px 10px;
+    width: 100%;
+  }
+  .content form input[type="text"], .content form input[type="password"], .content form input[type="email"] {
+    width: 100%;
+    max-width: 100%;
+  }
+  .profile-detail strong {
+    width: 100%;
+  }
+}
