--- a/assets/styles/map.css
+++ b/assets/styles/map.css
@@ -298,3 +298,9 @@ tr:hover i {
     max-height: 50%;
     overflow-y: auto;
 }
+.nav-divider {
+  width: 0;
+  border-right: 1px solid #e3e6f0;
+  height: calc(4.375rem - 2rem);
+  margin: auto 1rem;
+}
